--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
         </dependencies>
 <!--Puis arguments pour le build par Jenkins et le lancement des tests : -->
     <build>
+	<sourceDirectory>src</sourceDirectory>
+	<testSourceDirectory>test</testSourceDirectory>
         <pluginManagement>
                 <plugins>
                         <plugin>
