--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
         </dependencies>
 <!--Puis arguments pour le build par Jenkins et le lancement des tests : -->
     <build>
-	<sourceDirectory>src</sourceDirectory>
-	<testSourceDirectory>test</testSourceDirectory>
+	<sourceDirectory>src/main/java</sourceDirectory>
+	<testSourceDirectory>src/test/java</testSourceDirectory>
         <pluginManagement>
                 <plugins>
                         <plugin>
