--- a/pom.xml
+++ b/pom.xml
@@ -16,17 +16,29 @@
 
         <dependencies>
                 <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-api</artifactId>
-                        <version>5.7.0</version>
-                        <scope>test</scope>
-                </dependency>
-                <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>5.7.0</version>
-                        <scope>test</scope>
-                </dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-platform.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit-platform.version}</version>
+            <scope>test</scope>
+        </dependency>
+	<dependency>
+	  <groupId>org.junit.jupiter</groupId>
+	  <artifactId>junit-jupiter-params</artifactId>
+	  <version>${junit-platform.version}</version>
+	  <scope>test</scope>
+	</dependency>
+	<dependency>
+	  <groupId>org.junit.platform</groupId>
+	  <artifactId>junit-platform-runner</artifactId>
+	  <version>1.8.2</version>
+	  <scope>test</scope>
+	</dependency>
         </dependencies>
 <!--Puis arguments pour le build par Jenkins et le lancement des tests : -->
     <build>
